RESOLVED FIXED179486
ServiceWorker ResourceResponse should not assert in platformCertificateInfo()
https://bugs.webkit.org/show_bug.cgi?id=179486
Summary ServiceWorker ResourceResponse should not assert in platformCertificateInfo()
youenn fablet
Reported 2017-11-09 09:13:43 PST
ServiceWorker ResourceResponse should not assert in platformCertificateInfo()
Attachments
Patch (1.79 KB, patch)
2017-11-09 09:16 PST, youenn fablet
no flags
Patch (1.84 KB, patch)
2017-11-09 11:48 PST, youenn fablet
no flags
youenn fablet
Comment 1 2017-11-09 09:16:02 PST
Sam Weinig
Comment 2 2017-11-09 11:07:14 PST
Comment on attachment 326455 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=326455&action=review > Source/WebCore/ChangeLog:10 > + In that case, platformCertificateInfo should return std::nullopt. platformCertificateInfo doesn't return an optional, so I don't think this makes sense. It just returns a default constructed CertificateInfo.
youenn fablet
Comment 3 2017-11-09 11:48:02 PST
WebKit Commit Bot
Comment 4 2017-11-09 12:58:19 PST
Comment on attachment 326473 [details] Patch Clearing flags on attachment: 326473 Committed r224644: <https://trac.webkit.org/changeset/224644>
WebKit Commit Bot
Comment 5 2017-11-09 12:58:20 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2017-11-15 09:39:22 PST
Note You need to log in before you can comment on or make changes to this bug.