ServiceWorker ResourceResponse should not assert in platformCertificateInfo() https://bugs.webkit.org/show_bug.cgi?id=179486

Patch by Youenn Fablet <youenn@apple.com> on 2017-11-09
Reviewed by Chris Dumez.

No change of behavior.
In case a Response is returned by Service Worker, there may be no related internal response.
In that case, platformCertificateInfo is returning an empty CertificateInfo.

* platform/network/cocoa/ResourceResponseCocoa.mm:
(WebCore::ResourceResponse::platformCertificateInfo const):

Canonical link: https://commits.webkit.org/195542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224644 268f45cc-cd09-0410-ab3c-d52691b4dbfc